# scip_example

./: CMakeLists.txt  README.md  config.h  config.yml  main.cpp  refl.hpp
python/: main.py  main1.py  main2.py  pso.py  tempCodeRunnerFile.py
src/: objective_function.cpp  pso.py  setup.py
src/objective_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stubs/: objective_module.pyi
